# learn_rest_by_example

./: .travis.yml  README.md
python/: .gitignore  Dockerfile  README.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
python/src/main/db/: adapter.py  entry.py  memory.py
python/src/main/restbyexample/phonebook/: __init__.py  di.py
python/src/main/restbyexample/phonebook/db/: adapter.py  memory.py
python/src/main/restbyexample/phonebook/pecan/: README.md  app.py  config.py  jsonify_entry.py  run_cheroot.py  run_cherrypy.py  utils.py
python/src/main/restbyexample/phonebook/pecan/controllers/: json_error_hook.py  phonebook_controller.py  phonebook_entry_controller.py  root.py  utils.py
python/src/tests/blackbox/restbyexample/phonebook/: test_blackbox_phonebook.py
python/src/tests/db/: test_adapter.py  test_memory.py
python/src/tests/functionaltests/restbyexample/phonebook/: matchers.py
python/src/tests/functionaltests/restbyexample/phonebook/pecan/: config.py  functional_test_base.py  test_phonebook.py  test_run_cheroot.py
python/src/tests/unittests/restbyexample/phonebook/db/: test_adapter.py  test_memory.py
python/src/tests/unittests/restbyexample/phonebook/pecan/: test_utils.py
python/src/tests/unittests/restbyexample/phonebook/pecan/controllers/: test_phonebook_controller.py  test_utils.py
