[metadata]
name = phonebook_pecan
author = Csaba Fülöp
author-email = fcsemcc+dev@gmail.com
summary = Example phonebook REST application with Pecan
description-file = README.md
home-page = https://github.com/csfulop/learn_rest_by_example
license = LGPL v3.0
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    tutorial
    REST
    pecan
